--- a/index.html
+++ b/index.html
@@ -105,12 +105,10 @@
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+             Currently, I'm an undergraduate student at IIT BHU, pursuing my third year of B.Tech. 
+              I'm deeply passionate about technology and enjoy tackling challenges in Data Structures and Algorithms (DSA). 
+              Additionally, I have a keen interest in front-end development, where I combine my creativity with technical skills
+              to build engaging user interfaces.
             </p>
           </div>
         </div>
