--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </div>
           <div class="text-container">
             <p>
-             Currently, I'm an undergraduate student at IIT BHU, pursuing my third year of B.Tech. 
+             Currently, I'm an undergraduate student at IIT BHU, pursuing my final year of B.Tech. 
               I'm deeply passionate about technology and enjoy tackling challenges in Data Structures and Algorithms (DSA). 
               Additionally, I have a keen interest in front-end development, where I combine my creativity with technical skills
               to build engaging user interfaces.
